welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:28: error: not found: type array
def faireMotif(T:array)
                 ^Array2:43: error: not found: value isFaceMur
  } while (!isFaceMur)
            ^